--- a/src/RedditShowerThoughts/RedditShowerThoughtsPage.xaml
+++ b/src/RedditShowerThoughts/RedditShowerThoughtsPage.xaml
@@ -3,7 +3,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	xmlns:local="clr-namespace:RedditShowerThoughts"
 	x:Class="RedditShowerThoughts.RedditShowerThoughtsPage">
-	<Grid RowSpacing="0">
+	<Grid RowSpacing="0" HorizontalOptions="Fill" VerticalOptions="Fill">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="AUTO" />
 			<RowDefinition Height="*" />
